<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ques">

        <android.support.v7.widget.CardView
            android:id="@+id/level_detail_fragment_question_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            android:translationZ="5dp"
            app:cardBackgroundColor="#283593"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:id="@+id/level_detail_fragment_question_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/enter_host_name_and_password_together"
                android:textColor="#ffffff"
                android:textSize="23sp" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/level_detail_fragment_open_terminal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:alpha="0.9"
            android:background="#283593"
            android:fontFamily="serif-monospace"
            android:text="@string/message_open_terminal"
            android:textColor="#fff"
            android:textSize="20sp"
            android:translationZ="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_detail_fragment_question_card_view" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0.8"
            android:translationZ="5dp"
            app:cardBackgroundColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_detail_fragment_points_text_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#283593"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/message_question"
                android:textColor="#ffffff"
                android:textSize="23sp" />

        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/level_detail_fragment_answer_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/hint_enter_answer"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_detail_fragment_hint_button" />

        <Button
            android:id="@+id/level_detail_fragment_submit_answer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:alpha="0.8"
            android:background="#000"
            android:fontFamily="serif-monospace"
            android:text="@string/submit_answer"
            android:textColor="#ffffff"
            android:textSize="23sp"
            android:translationZ="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_detail_fragment_answer_edit_text" />

        <Button
            android:id="@+id/level_detail_fragment_hint_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="#283593"
            android:fontFamily="serif-monospace"
            android:text="@string/get_hint"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_detail_fragment_open_terminal_button" />

        <TextView
            android:id="@+id/level_detail_fragment_points_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif-monospace"
            android:gravity="start"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Points:100" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
